# genesis-proxy-router

./: CONSTITUTION.md  Cargo.toml  LICENSE-MIT  README.md
docs/: GETTING-STARTED.md
src/: lib.rs  stream.rs  types.rs  util.rs
src-tauri/: clippy.toml
src/discover/: lan.rs  local.rs  mod.rs  tailscale.rs
src/proxy/: adapter.rs  auth.rs  mod.rs  openai.rs
